# conjual

./: .gitignore  README.md  conjual.db
.claude/: settings.local.json
.github/workflows/: collect-data.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  conjual.db  docker-compose.yml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 5634ff9bdac3_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: auth.py  bot.py  market.py  portfolio.py  trades.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ohlcv.py  order.py  portfolio.py  trade.py  user.py
backend/app/services/: exchange.py
backend/data/historical/: buda_btc-clp_trades.parquet  buda_eth-clp_trades.parquet  temp_buda_btc-clp_trades.csv  temp_buda_eth-clp_trades.csv
backend/scripts/: collect_historical_data.py
backend/trading/: __init__.py
backend/trading/engine/: __init__.py  core.py  paper_trading.py
backend/trading/indicators/: __init__.py  technical.py
backend/trading/risk/: __init__.py  manager.py
backend/trading/strategies/: __init__.py  base.py  dca.py
backend/trading/strategies/ml/: __init__.py
docs/deployment/: aws_free_tier.md
mobile/: app.json  package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  login.tsx  register.tsx
mobile/app/(tabs)/: _layout.tsx  bot.tsx  index.tsx  settings.tsx  trades.tsx
mobile/constants/: Colors.ts  api.ts
mobile/services/: api.ts  auth.ts  bot.ts  index.ts  market.ts
mobile/stores/: authStore.ts  botStore.ts  index.ts  marketStore.ts
mobile/types/: index.ts
scripts/deploy/: setup_server.sh
