[project]
name = "conjual"
version = "0.1.0"
description = "Sistema de Trading Inteligente Autónomo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gabriel", email = "gabriel@conjual.local" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",  # SQLite async for development
    "alembic>=1.13.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",

    # Exchange & Trading
    "ccxt>=4.2.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",

    # ML & RL
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "torch>=2.1.0",

    # Data Processing
    "pyarrow>=15.0.0",
    "aiohttp>=3.9.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Monitoring (optional)
    "sentry-sdk[fastapi]>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
